feat(processor): support formatted generated sources
Add the common format_generated_source processor option to AbstractStandardProcessor and invoke palantir-java-format reflectively when enabled. Proton first honors an original formatter on the processor path, then falls back to the formatter and support libraries shaded into proton-core.jar under the vendor namespace.

Update the Buildr packaging to embed and relocate the formatter closure without publishing those artifacts as transitive dependencies. Extend the QA fixture harness to compare both expected and expectedFormatted output, and add regression coverage for fixture regeneration, POM metadata, shaded jar contents, missing formatter diagnostics, and isolated javac execution.